# diary

./: .gitignore  README.md  app.py  init_db.py  pyproject.toml  requirements.txt
diary/: __init__.py  auth.py  db.py  diary.py  schema.sql
diary/static/: style.css
diary/templates/: base.html
diary/templates/diary/: create.html  index.html  update.html
legacy/templates/: create.html  edit.html  index.html
static/css/: style.css
templates/: base.html  entry.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_diary.py  test_factory.py
